--- a/WebSellBuy/WebSellBuy/Views/Authentication/SignIn.cshtml
+++ b/WebSellBuy/WebSellBuy/Views/Authentication/SignIn.cshtml
@@ -15,6 +15,7 @@
     <link href="~/Content/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <script src="~/Content/js/allSite/popup.js"></script>
     <script src="~/Content/js/allSite/commonJs.js"></script>
+    <link href="~/Content/css/allPages/demo.css" rel="stylesheet" />
 </head>
 <body>
     <div id="fullscreen_bg" class="fullscreen_bg" />
@@ -63,5 +64,15 @@
             </div>
 
     </form>
+
+    <div style="z-index:9999;" class="back-dialog" id="dialog">
+        <div class="dialog-content">
+            <div class="dialog-title">
+                <span>Информация</span>
+                <a class='close-dialog' href='javascript: closedialog()'></a>
+            </div>
+            <span class="textInfoDialogForm"></span>
+        </div>
+    </div>
 </body>
 </html>
